[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = {version = "46.0.0", features = ["async"]}
arrow = {version = "46.0.0", features = ["pyarrow"]}
futures = "0.3"
bytes = "1.1"
tokio = {version = "1.32", features = ["full"]}
pyo3 = {version="0.19.2", features=["extension-module"]}

[lib]
name = "delta"
path = "lib.rs"
crate-type = ["cdylib"]
